updated preporcessing cals

--- a/notebooks/simpsons_GAN_Maker.ipynb
+++ b/notebooks/simpsons_GAN_Maker.ipynb
@@ -96,16 +96,30 @@
       },
       "cell_type": "code",
       "source": [
-        "python3 dataset_utils.py --input_src /Users/kylemathewson/videopic/simpsons3 --shuffle --output_dir /Users/kylemathewson/videopic/simpsons_out --w 128 --h 128 --centered --action none --save_ext jpg --save_mode output_only\n",
+        "rm /Users/kylemathewson/videopic/simpsons3/.DS_Store\n",
+        "python3 dataset_utils.py --input_src /Users/kylemathewson/videopic/simpsons3 --shuffle --output_dir /Users/kylemathewson/videopic/3out --w 128 --h 128 --centered --action none --save_ext jpg --save_mode output_only\n",
         "\n",
-        "python3 dataset_utils.py --input_src /Users/kylemathewson/videopic/simpsons4 --shuffle --output_dir /Users/kylemathewson/videopic/simpsons_out --w 128 --h 128 --centered --action none --save_ext jpg --save_mode output_only\n",
+        "rm /Users/kylemathewson/videopic/simpsons4/.DS_Store\n",
+        "python3 dataset_utils.py --input_src /Users/kylemathewson/videopic/simpsons4 --shuffle --output_dir /Users/kylemathewson/videopic/4out --w 128 --h 128 --centered --action none --save_ext jpg --save_mode output_only\n",
         "\n",
-        "python3 dataset_utils.py --input_src /Users/kylemathewson/videopic/simpsons5 --shuffle --output_dir /Users/kylemathewson/videopic/simpsons_out --w 128 --h 128 --centered --action none --save_ext jpg --save_mode output_only\n",
+        "rm /Users/kylemathewson/videopic/simpsons5/.DS_Store\n",
+        "python3 dataset_utils.py --input_src /Users/kylemathewson/videopic/simpsons5 --shuffle --output_dir /Users/kylemathewson/videopic/5out --w 128 --h 128 --centered --action none --save_ext jpg --save_mode output_only\n",
         "\n",
-        "python3 dataset_utils.py --input_src /Users/kylemathewson/videopic/simpsons6 --shuffle --output_dir /Users/kylemathewson/videopic/simpsons_out --w 128 --h 128 --centered --action none --save_ext jpg --save_mode output_only\n"
+        "rm /Users/kylemathewson/videopic/simpsons6/.DS_Store\n",
+        "python3 dataset_utils.py --input_src /Users/kylemathewson/videopic/simpsons6 --shuffle --output_dir /Users/kylemathewson/videopic/6out --w 128 --h 128 --centered --action none --save_ext jpg --save_mode output_only\n"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "lsdIQm1wBIdw",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "now zip up the files, put in google drive pics folder, then unzip into archive and rename"
+      ]
     },
     {
       "metadata": {
